<resources>
    <string name="app_name">AccessibilityApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">App Settings</string>



<!-- Navigation Menu Strings-->
    <string name="menu_account">View Accounts</string>
    <string name="menu_transfer">Transfer , Deposit &amp; Pay</string>
    <string name="menu_explore">Explore Products &amp; offers</string>
    <string name="menu_login">Login Preferences</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_manage_cards">Manage Cards</string>
    <string name="menu_statement">Statement &amp; Docs</string>
    <string name="menu_help">Help &amp; Services</string>

    <!--Screen Titles-->
    <string name="title_account">@string/menu_account</string>
    <string name="title_deposit">Deposit</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_paybill">Pay Bill</string>
    <string name="title_send">Send</string>
    <string name="title_shop">Shop</string>

    <string-array name="tab_items">
         <item>@string/title_transfer</item>
            <item>@string/title_deposit</item>
            <item>@string/title_paybill</item>
            <item>@string/title_send</item>
            <item>@string/title_shop</item>
    </string-array>

    <!--Login Screen Strings -->
    <string name="hello">Hello!</string>
    <string name="glad_u_r_here">Glad you\'re here</string>
    <string name="enter_username">Please Enter your username</string>
    <string name="enter_password">Please Enter your password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rememberme">  Remember Me</string>
    <string name="login_help">Login Help</string>
    <string name="login">Log In</string>
    <string name="create_a_username_and_password">Create a Username and Password</string>
    <string name="not_a_u_s_bank_customer">Not a U.S. Bank customer?</string>
    <string name="explore_loans_cards_more"><![CDATA[Explore loans, cards & more]]></string>
    <string name="tour_the_app">Tour the app</string>
    <string name="help_icon">Tap here for Help</string>
    <string name="forgot_username">Forgot username?</string>
    <string name="reset_password">Reset Password?</string>
    <string name="cancel">Cancel</string>
    <string name="enable_it_to_remember_me">Enable it to Remember Me!</string>


    <string name="view_accounts">View Accounts</string>
    <string name="transfer_deposit_pay"><![CDATA[Transfer, deposit & pay]]></string>
    <string name="explore_products_offers"><![CDATA[Explore products & offers]]></string>
    <string name="login_preference">Login Preference</string>
    <string name="notifications">Notifications</string>
    <string name="manage_cards">Manage Cards</string>
    <string name="statement_docs"><![CDATA[Statement & Docs]]></string>
    <string name="help_services"><![CDATA[Help & Services]]></string>


    <string name="insight_updates"><![CDATA[Insight & Updates]]></string>
    <string name="this_is_account_activity">This is account activity</string>
    <string name="you_have_1_upcoming_payment">you have 1 upcoming payment</string>
    <string name="welcome_back">Welcome back!</string>


    <!--Help -->
    <string name="search_help_topics">Search Help Topics</string>
    <string name="get_more_information_about">Get more information about :</string>
    <string name="how_do_i_send_money_to_a_person">How do I send money to a person?</string>
    <string name="how_do_i_check_my_messages">How do I check my messages?</string>
    <string name="how_can_i_increase_security_onmy_smartphone_or_tablet">How can I increase security on my smartphone or tablet?</string>
    <string name="guided_help">Guided Help</string>
    <string name="get_help_sending_money">Get help sending money</string>
    <string name="cobrowise">Cobrowise</string>
    <string name="app_version_">App Version: 3.0.1</string>
    <string name="help">Help</string>

</resources>
