<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutFullScreen"
    android:fillViewport="true"
    android:background="@color/White"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    style="@style/LayoutFullScreen"
    android:background="@color/White"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/image_help"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:layout_margin="@dimen/_10dp"
        android:padding="@dimen/_10dp"
        android:background="@color/transparent"
        android:contentDescription="@string/help_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_announcement"
        android:focusable="true"/>

    <TextView
        android:id="@+id/text_hello"
        style="@style/LayoutWrap"
        android:layout_margin="@dimen/_10dp"
        android:text="@string/hello"
        android:textColor="@color/DarkBlue"
        android:textSize="@dimen/_36sp"
        android:textStyle="bold"
        android:contentDescription="@string/hello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/text_glad"
        style="@style/TextLargeTitleStyle"
        android:text="@string/glad_u_r_here"
        android:contentDescription="@string/glad_u_r_here"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_hello" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_username"
        style="@style/TextInputLayoutStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_glad"
        android:layout_marginTop="@dimen/_40dp"
        android:theme="@style/TextInputLayoutAppearance"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_username"
        style="@style/TextInputEditStyle"
        android:hint="@string/username"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        style="@style/TextInputLayoutStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_username"
        android:layout_marginTop="@dimen/_5dp"
        android:theme="@style/TextInputLayoutAppearance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            style="@style/TextInputEditStyle"
            android:hint="@string/password"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/buttonLogin"
        style = "@style/LayoutHeight_Wrap"
        android:minHeight="@dimen/_50dp"
        android:text="@string/login"
        android:padding="@dimen/_8dp"
        android:layout_margin="@dimen/_10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/layout_rememberme"
        android:focusable="true"/>
<RelativeLayout
    android:id="@+id/layout_rememberme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_margin="@dimen/_10dp"
    app:layout_constraintTop_toBottomOf="@+id/text_input_password">
    <TextView
        android:id="@+id/text_login_help"
        style="@style/TextSmallStyle"
        android:text="@string/login_help"
        android:textColor="@color/Black"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/login_help"
        />
    <Switch
        android:id="@+id/switchRememberMe"
        style="@style/TextSmallStyle"
        android:layoutDirection="rtl"
        android:text="@string/rememberme"
        android:textColor="@color/Black"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/enable_it_to_remember_me"
        />

</RelativeLayout>



    <TextView
        android:id="@+id/text_create"
        style="@style/TextSmallStyle"
        android:layout_margin="@dimen/_15dp"
        android:text="@string/create_a_username_and_password"
        android:textColor="@color/DarkBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
       />

    <TextView
        android:id="@+id/text_not_a_customer"
        style="@style/TextSubTitleStyle"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/not_a_u_s_bank_customer"
        app:layout_constraintTop_toBottomOf="@+id/text_create"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/text_explore"
        style="@style/TextSmallStyle"
        android:layout_margin="@dimen/_8dp"
        android:gravity="top"
        android:text="@string/explore_loans_cards_more"
        android:textColor="@color/DarkBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_not_a_customer" />


    <TextView
        android:id="@+id/text_tour"
        style="@style/TextSmallStyle"
        android:text="@string/tour_the_app"
        android:textColor="@color/DarkBlue"
        android:layout_marginTop="@dimen/_50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_explore" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>